-Boro will now emerge out of the ground to the side of the player after using its flesh spine attack to prevent players from getting hit unfairly (similarly to the phase 1 flesh spine attack)
-Changed boros flamethrower attack and made it so he whips his tongue at you instead (The attack itself is still mechanically the same, but with a new projectile)
-Nerfed orro-boros piercing projectile resistance (Previously it divided piercing projectile damage by 1.8, now it divides it by 1.5)
-Massively improved the visual effect for orro's and boro's enrage auras, and also changed the way the worms themselves are drawn so their heads and other segments aren't weirdly off-center
-All of daffodil's attacks are now more spaced out to give you some breathing room inbetween them
-Reduced the screenshake intensity for daffodil's fly bullet hell and seed thorn attacks
-Replaced daffodils laser projectile stream in phase 1 with an actual solar beam that sweeps across the arena
-Replaced daffodils laser projectiles in phase 2 with the same new beam projectile, except it doesnt move (This new beam projectile also fixes weird player collision issues the old one had)
-Daffodil now has a new punch attack in phase 2
-Spooky spirit now has a new eye deathbeam projectile to fix collision issues the previous one had
-Nerfed spooky spirit's base health from 3500 to 3000, and its base defense from 15 to 8
-Tiny spider eggs can now be killed, and when killed they will not spawn a tiny spider
-Heavily nerfed monster eyes jumping rate and speed, and added a new gore effect when they die
-Candle monsters no longer spit flaming candle wax unless the player is close enough to them
-Lowered the defense of some of the spider grotto enemies
-Nerfed all of the egg incursion enemies health


Miscellaneous:

-Sentient hearts now only require 2 to be researched in journey mode to unlock duplication