@@ -35,7 +35,7 @@ namespace Spooky.Content.NPCs.Boss.Orroboro
         {
             NPC.lifeMax = 15000;
             NPC.damage = 55;
-            NPC.defense = 30;
+            NPC.defense = 15;
             NPC.width = 65;
             NPC.height = 65;
             NPC.knockBackResist = 0f;
