@@ -98,7 +98,7 @@ namespace Spooky.Content.NPCs.Boss.Orroboro
         {
             NPC.lifeMax = 15000;
             NPC.damage = 55;
-            NPC.defense = 30;
+            NPC.defense = 15;
             NPC.width = 65;
             NPC.height = 65;
             NPC.npcSlots = 25f;
